--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 
 
+const TELEGRAM_API_TOKEN = `7618869959:AAFu_GTW0_p41b2GwM2WgLBqLkcvRVw5dL8`;
+const PORT = "8000";
+const GOOGLE_API_KEY = 'AIzaSyDr49uAU13FwTyaJInQ5JZlVKX1ZupC9tA'
